# eoka

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  dependabot-automerge.yml  publish.yml
examples/: basic.rs  bestbuy_cart.rs  detection_test.rs  rebrowser_test.rs  request_capture.rs  smoke.rs
src/: annotate.rs  browser.rs  error.rs  lib.rs  network.rs  page.rs  session.rs
src/cdp/: connection.rs  transport.rs  types.rs
src/stealth/: evasions.rs  fingerprint.rs  human.rs  mod.rs  patcher.rs
tests/: integration.rs
